2008-09-30  Jonathan Pryor  <jpryor@novell.com>

	* TextReader.cs: Change the default semantics of .Lines(), .Words(),
	  and .Tokens() so that the TextReader *is* disposed by default.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* Either.cs: Finish the "expend all efforts to convert values"
	  approach by using IConvertable to convert the source value to the
	  destination value, in this case by using Convert.ChangeType().
	  Now allows EnumerableValueReader.Read() to perform "implicit"
	  conversions, e.g. int->bool, which TypeDescriptor doesn't support.
	  Consistently return NotSupportedException if the conversion throws
	  an exception (as Convert.ChangeType() throws InvalidCastException if
	  it fails, which makes for an ambiguous error condition).
	* EnumerableValueReader.cs: Don't bother witih IConvertible changes,
	  as Either.TryParse() now does this.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Change .Tokens() categories from Func<TSource,bool>
	  to Func<TAggregate, TSource, bool>, so that the callback can be
	  "smarter" about category detection.
	* String.cs: Add .Tokens() extension method on strings.
	* TextReader.cs: Revert .Words() semantic changes so that .Words() now
	  just returns whitespace-separated words (as before).  Add .Tokens()
	  to return tokens extracted from the input stream (the newer .Words()
	  semantics).  .Tokens() takes a different delegate type from
	  IEnumerable<T>.Tokens(), so we need to map them (for the `#if false`
	  block), as a non-translated version would require "exposing" the
	  internal StringBuilder to public users.

2008-09-27  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.Value().
	* Stream.cs: .WithSystemConverter() should return SystemConverter.
	* StreamConverter.cs: Re-add, as I had forgotten the point to
	  StreamConverter, which was to have a single Stream-oriented
	  IValueReader/IValueWriter base class (though this was before there